--- a/render.yaml
+++ b/render.yaml
@@ -22,7 +22,7 @@ services:
           type: web
           envVarKey: RENDER_EXTERNAL_URL
       - key: NEXTAUTH_SECRET
-        generateValue: true
+        generateValue: false
 
       # Database
       - key: NEXT_PRIVATE_DATABASE_URL
@@ -48,55 +48,55 @@ services:
       - key: NEXT_PRIVATE_SMTP_TRANSPORT
         value: 'smtp-auth'
       - key: NEXT_PRIVATE_SMTP_HOST
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_SMTP_PORT
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_SMTP_USERNAME
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_SMTP_PASSWORD
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_SMTP_FROM_NAME
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_SMTP_FROM_ADDRESS
-        sync: true
+        sync: false
 
       # Stripe
       - key: NEXT_PRIVATE_STRIPE_API_KEY
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_STRIPE_WEBHOOK_SECRET
-        sync: true
+        sync: false
       - key: NEXT_PUBLIC_STRIPE_COMMUNITY_PLAN_MONTHLY_PRICE_ID
-        sync: true
+        sync: false
       - key: NEXT_PUBLIC_STRIPE_COMMUNITY_PLAN_YEARLY_PRICE_ID
-        sync: true
+        sync: false
 
       # Features
       - key: NEXT_PUBLIC_POSTHOG_KEY
-        sync: true
+        sync: false
       - key: NEXT_PUBLIC_POSTHOG_HOST
         value: 'https://eu.posthog.com'
       - key: NEXT_PUBLIC_FEATURE_BILLING_ENABLED
-        sync: true
+        sync: false
 
       # Redis (Only required for marketing site, but added for completeness)
       - key: NEXT_PRIVATE_REDIS_URL
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_REDIS_TOKEN
-        sync: true
+        sync: false
 
       # Storage
       - key: NEXT_PUBLIC_UPLOAD_TRANSPORT
         value: 'database'
       - key: NEXT_PRIVATE_UPLOAD_ENDPOINT
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_UPLOAD_REGION
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_UPLOAD_BUCKET
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_UPLOAD_ACCESS_KEY_ID
-        sync: true
+        sync: false
       - key: NEXT_PRIVATE_UPLOAD_SECRET_ACCESS_KEY
-        sync: true
+        sync: false
 
 databases:
   - name: documenso-db
