--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ NEXT_PUBLIC_WEBAPP_URL="http://localhost:3000"
 NEXT_PUBLIC_MARKETING_URL="http://localhost:3001"
 
 # [[DATABASE]]
-NEXT_PRIVATE_DATABASE_URL="postgres://documenso:password@127.0.0.1:54320/documenso"
+NEXT_PRIVATE_DATABASE_URL="postgresql://postgres:Eudegabrieltocv2903!@db.pzmdqcvhvgcwdgjogtwn.supabase.co:5432/postgres"
 # Defines the URL to use for the database when running migrations and other commands that won't work with a connection pool.
-NEXT_PRIVATE_DIRECT_DATABASE_URL="postgres://documenso:password@127.0.0.1:54320/documenso"
+NEXT_PRIVATE_DIRECT_DATABASE_URL="postgresql://postgres:Eudegabrieltocv2903!@db.pzmdqcvhvgcwdgjogtwn.supabase.co:5432/postgres"
 
 # [[E2E Tests]]
 E2E_TEST_AUTHENTICATE_USERNAME="Test User"
