--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="secret"
 
 # [[AUTH OPTIONAL]]
-NEXT_PRIVATE_GOOGLE_CLIENT_ID=""
-NEXT_PRIVATE_GOOGLE_CLIENT_SECRET=""
+NEXT_PRIVATE_GOOGLE_CLIENT_ID="776912298661-ktcjb57532h5spn726pjlv7cbbbgopfe.apps.googleusercontent.com"
+NEXT_PRIVATE_GOOGLE_CLIENT_SECRET="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"
 
 # [[URLS]]
 NEXT_PUBLIC_WEBAPP_URL="http://localhost:3000"
