--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # [[AUTH]]
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://rubrix.onrender.com"
 NEXTAUTH_SECRET="secret"
 
 # [[AUTH OPTIONAL]]
@@ -7,8 +7,8 @@ NEXT_PRIVATE_GOOGLE_CLIENT_ID="776912298661-ktcjb57532h5spn726pjlv7cbbbgopfe.app
 NEXT_PRIVATE_GOOGLE_CLIENT_SECRET="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"
 
 # [[URLS]]
-NEXT_PUBLIC_WEBAPP_URL="http://localhost:3000"
-NEXT_PUBLIC_MARKETING_URL="http://localhost:3001"
+NEXT_PUBLIC_WEBAPP_URL="https://rubrix.onrender.com"
+NEXT_PUBLIC_MARKETING_URL="https://rubrix.onrender.com"
 
 # [[DATABASE]]
 NEXT_PRIVATE_DATABASE_URL="postgresql://postgres:Eudegabrieltocv2903!@db.pzmdqcvhvgcwdgjogtwn.supabase.co:5432/postgres"
